# huggingface-gui

./: .dockerignore  .env.example  .gitignore  API_EXAMPLES.md  API_USAGE_GUIDE.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  Makefile  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md  app.py  app_state.json  benchmark_loading.py  code_snippet_generator_original.py  cpu_optimizer.py  debug_logits.py  debug_model_loading.py  demo.py  detailed_profiler.py  device_manager.py  diagnose_streamlit_issue.py  docker-compose.yml  extreme_optimizer.py  fallback_loader.py  fast_tensor_loader.py  fastapi_server.py  fix_model_manager.py  lightning_loader.py  model_analyzer.py  model_cache.py  model_database.py  model_manager.py  model_manager_original.py  model_optimization.py  model_type_detector.py  parallel_model_loader.py  performance_improvements.md  pyproject.toml  (+17 more)
.streamlit/: config.toml
codegen/: __init__.py  datasets.py  generators.py  optimization.py  snippets.py
models/: __init__.py  memory_manager.py  model_analyzer.py  model_info.py  model_loader.py  model_manager.py  model_type_detector.py  model_type_detector_original.py
models/analysis/: __init__.py  config_analyzer.py  summary_generator.py  tokenizer_analyzer.py  weight_analyzer.py
models/detection/: __init__.py  autoconfig_analyzer.py  config_analyzer.py  model_database.py  pattern_matchers.py
models/lightning/: __init__.py  checkpoint_loader.py  model_converter.py
scripts/: compatibility_check.py  health_check.py
servers/: __init__.py  app_state.json  fastapi_server.py  fastapi_server_original.py  run.py  run_original.py
servers/api/: __init__.py  middleware.py  models.py  models_router.py  prediction_router.py  server_manager.py
servers/gui/: __init__.py  desktop_app.py  event_handlers.py  window_manager.py
services/: ai_tasks.py  auth_service.py  model_detection.py  status_tracker.py
tests/: test_compatibility_checker.py  test_lightning_loader.py  test_lightning_loader_refactored.py
tests/test_models/: test_model_analyzer.py  test_model_type_detector.py
tests/test_servers/: __init__.py  test_fastapi_server.py  test_run_functions.py
ui/streamlit/: models.py  monitoring.py  server.py  tasks.py
utils/: __init__.py  gpu_detector.py
utils/compatibility/: __init__.py  report_generator.py  requirement_validator.py  system_info_collector.py
utils/health/: __init__.py  service_checker.py  system_monitor.py
